# MemBurrow

./: .dockerignore  .env.distributed.example  .env.example  .env.lite.example  .gitignore  Cargo.toml  Dockerfile  LLM_README.md  README-zh.md  README.md  docker-compose.yml
.github/workflows/: docker.yml
api/: openapi.yaml
cmd/memory-api/: Cargo.toml
cmd/memory-api/src/: main.rs
cmd/memory-migrator/: Cargo.toml
cmd/memory-migrator/src/: main.rs
cmd/memory-worker/: Cargo.toml
cmd/memory-worker/src/: main.rs
crates/memory-core/: Cargo.toml
crates/memory-core/src/: config.rs  lib.rs  model.rs  sqlite_store.rs  store.rs
docker/: memory-service-entrypoint.sh
migrations/: 0001_init.sql  0002_audit_and_ops.sql  0003_llm_usage.sql  0004_namespace_scope.sql
migrations_sqlite/: 0001_init.sql
