[package]
name = "memory-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8"
chrono = { version = "0.4.44", features = ["clock"] }
memory-core = { version = "0.1.0", path = "../../crates/memory-core" }
reqwest = { version = "0.13", features = ["json", "rustls"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
uuid = { version = "1.21.0", features = ["v7"] }
