[package]
name = "memory-migrator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
memory-core = { version = "0.1.0", path = "../../crates/memory-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
