[package]
name = "memory-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
memory-core = { version = "0.1.0", path = "../../crates/memory-core" }
reqwest = { version = "0.13", features = ["json", "rustls"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
uuid = { version = "1.21.0", features = ["serde", "v7"] }
