[package]
name = "memory-core"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde", "clock"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8", features = ["postgres", "sqlite", "runtime-tokio", "tls-rustls", "uuid", "chrono", "json", "migrate"] }
thiserror = "2.0.18"
uuid = { version = "1.21.0", features = ["serde", "v7"] }
